FIxed formatting again

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 out/
 cache/
 
+# Broadcast files (optional to keep private)
+broadcast/
+
 # Node modules (if you installed any JS tooling)
 node_modules/
 
